[gd_scene load_steps=19 format=3 uid="uid://d0vuh1tlr0vij"]

[ext_resource type="Script" path="res://Scripts/Salas/sala_de_debug_3.gd" id="1_3kiw8"]
[ext_resource type="PackedScene" uid="uid://cccdtb4q2cuew" path="res://Tilesets/generic_rooms_tilemap.tscn" id="1_r8f07"]
[ext_resource type="PackedScene" uid="uid://dhhtj636fq3ii" path="res://Cenas/Components/holders_na_cena.tscn" id="2_lyiof"]
[ext_resource type="PackedScene" uid="uid://cjt0gtcxj8gec" path="res://Cenas/sett.tscn" id="2_ryoir"]
[ext_resource type="PackedScene" uid="uid://y7u1lhdr7318" path="res://Cenas/Interagiveis/holder.tscn" id="3_0v0bs"]
[ext_resource type="PackedScene" uid="uid://cw3c1b2hook3w" path="res://Cenas/Components/calculo_component.tscn" id="3_nvkyp"]
[ext_resource type="PackedScene" uid="uid://dit1rxp4yx7oe" path="res://Cenas/Interagiveis/stage_end_door.tscn" id="4_s2tpq"]
[ext_resource type="PackedScene" uid="uid://cf6ptckueddt0" path="res://Cenas/Interagiveis/subtracao.tscn" id="5_04uty"]
[ext_resource type="PackedScene" uid="uid://dr4ri0l6xnokh" path="res://Cenas/Interagiveis/coin_eight.tscn" id="6_3ffci"]
[ext_resource type="PackedScene" uid="uid://b8ggji74vmqbo" path="res://Cenas/Interagiveis/adicao.tscn" id="6_hl0ei"]
[ext_resource type="PackedScene" uid="uid://dm7g2uhasu1cj" path="res://Cenas/coin_number_one.tscn" id="7_ju6t0"]
[ext_resource type="PackedScene" uid="uid://b6bgp12kxwcvu" path="res://Cenas/Interagiveis/coin_seven.tscn" id="8_kra37"]
[ext_resource type="PackedScene" uid="uid://c3uloiqeopbkh" path="res://Cenas/Interagiveis/coin_six.tscn" id="9_emalu"]
[ext_resource type="PackedScene" uid="uid://cfpt784ym7lu1" path="res://Cenas/Interagiveis/coin_two.tscn" id="10_wglgk"]
[ext_resource type="PackedScene" uid="uid://c7tbsi0btdfbe" path="res://Cenas/Interagiveis/coin_three.tscn" id="11_26suf"]
[ext_resource type="Texture2D" uid="uid://dwjqlkl615td0" path="res://Sprites/Interagiveis/Interactables and Numbers.png" id="15_x06bk"]
[ext_resource type="PackedScene" uid="uid://blheb8yet33eb" path="res://Cenas/Inimigos/snake.tscn" id="17_8ttds"]
[ext_resource type="PackedScene" uid="uid://dwuei1rxpm7nn" path="res://Cenas/Inimigos/spider.tscn" id="18_4tuhs"]

[node name="Sala de Debug 3" type="Node2D"]
script = ExtResource("1_3kiw8")

[node name="Generic Rooms Tilemap" parent="." instance=ExtResource("1_r8f07")]
layer_1/tile_data = PackedInt32Array(-458765, 917504, 0, -393229, 917504, 1, -458764, 851968, 0, -393228, 851968, 1, -458763, 917504, 0, -393227, 917504, 1, -458762, 851968, 0, -393226, 851968, 1, -458761, 917504, 0, -393225, 917504, 1, -458760, 851968, 0, -393224, 851968, 1, -458759, 917504, 0, -393223, 917504, 1, -458758, 851968, 0, -393222, 851968, 1, -458757, 917504, 0, -393221, 917504, 1, -458756, 851968, 0, -393220, 851968, 1, -458755, 917504, 0, -393219, 917504, 1, -458754, 851968, 0, -393218, 851968, 1, -458753, 917504, 0, -393217, 917504, 1, -524288, 851968, 0, -458752, 851968, 1, -524287, 917504, 0, -458751, 917504, 1, -524286, 851968, 0, -458750, 851968, 1, -524285, 917504, 0, -458749, 917504, 1, -524284, 851968, 0, -458748, 851968, 1, -524283, 917504, 0, -458747, 917504, 1, -524282, 851968, 0, -458746, 851968, 1, -524281, 917504, 0, -458745, 917504, 1, -524280, 851968, 0, -458744, 851968, 1, -524279, 917504, 0, -458743, 917504, 1, -524278, 851968, 0, -458742, 851968, 1, -524277, 917504, 0, -458741, 917504, 1, -524276, 851968, 0, -458740, 851968, 1, -524275, 917504, 0, -458739, 917504, 1, -393203, 917504, 0, -327667, 917504, 1, -262131, 917504, 0, -196595, 917504, 1, -131059, 917504, 0, -65523, 917504, 1, -131061, 917504, 0, -65525, 917504, 1, -131060, 851968, 0, -65524, 851968, 1, -262133, 917504, 0, -196597, 917504, 1, -262132, 851968, 0, -196596, 851968, 1, -393205, 917504, 0, -327669, 917504, 1, -393204, 851968, 0, -327668, 851968, 1, -393207, 917504, 0, -327671, 917504, 1, -393206, 851968, 0, -327670, 851968, 1, -262135, 917504, 0, -196599, 917504, 1, -262134, 851968, 0, -196598, 851968, 1, -131063, 917504, 0, -65527, 917504, 1, -131062, 851968, 0, -65526, 851968, 1, -262137, 917504, 0, -196601, 917504, 1, -262136, 851968, 0, -196600, 851968, 1, -131065, 917504, 0, -65529, 917504, 1, -131064, 851968, 0, -65528, 851968, 1, -131067, 917504, 0, -65531, 917504, 1, -131066, 851968, 0, -65530, 851968, 1, -262139, 917504, 0, -196603, 917504, 1, -262138, 851968, 0, -196602, 851968, 1, -131069, 917504, 0, -65533, 917504, 1, -131068, 851968, 0, -65532, 851968, 1, -262141, 917504, 0, -196605, 917504, 1, -262140, 851968, 0, -196604, 851968, 1, -393213, 917504, 0, -327677, 917504, 1, -393212, 851968, 0, -327676, 851968, 1, -393211, 917504, 0, -327675, 917504, 1, -393210, 851968, 0, -327674, 851968, 1, -393209, 917504, 0, -327673, 917504, 1, -393208, 851968, 0, -327672, 851968, 1, -131071, 917504, 0, -131070, 851968, 0, -262143, 917504, 0, -196607, 917504, 1, -262142, 851968, 0, -196606, 851968, 1, -393215, 917504, 0, -327679, 917504, 1, -393214, 851968, 0, -327678, 851968, 1, -196609, 917504, 0, -131073, 917504, 1, -262144, 851968, 0, -196608, 851968, 1, -65535, 917504, 1, -65534, 851968, 1, -65537, 917504, 0, -1, 917504, 1, -131072, 851968, 0, -65536, 851968, 1, -65539, 917504, 0, -3, 917504, 1, -65538, 851968, 0, -2, 851968, 1, -65541, 917504, 0, -5, 917504, 1, -65540, 851968, 0, -4, 851968, 1, -65543, 917504, 0, -7, 917504, 1, -65542, 851968, 0, -6, 851968, 1, -65545, 917504, 0, -9, 917504, 1, -65544, 851968, 0, -8, 851968, 1, -65547, 917504, 0, -11, 917504, 1, -65546, 851968, 0, -10, 851968, 1, -65549, 917504, 0, -13, 917504, 1, -65548, 851968, 0, -12, 851968, 1, -196621, 917504, 0, -131085, 917504, 1, -196620, 851968, 0, -131084, 851968, 1, -327693, 917504, 0, -262157, 917504, 1, -327692, 851968, 0, -262156, 851968, 1, -327691, 917504, 0, -262155, 917504, 1, -327690, 851968, 0, -262154, 851968, 1, -327689, 917504, 0, -262153, 917504, 1, -327688, 851968, 0, -262152, 851968, 1, -327687, 917504, 0, -262151, 917504, 1, -327686, 851968, 0, -262150, 851968, 1, -327685, 917504, 0, -262149, 917504, 1, -327684, 851968, 0, -262148, 851968, 1, -196611, 917504, 0, -131075, 917504, 1, -196610, 851968, 0, -131074, 851968, 1, -196613, 917504, 0, -131077, 917504, 1, -196612, 851968, 0, -131076, 851968, 1, -196615, 917504, 0, -131079, 917504, 1, -196614, 851968, 0, -131078, 851968, 1, -327683, 917504, 0, -262147, 917504, 1, -327682, 851968, 0, -262146, 851968, 1, -327681, 917504, 0, -262145, 917504, 1, -393216, 851968, 0, -327680, 851968, 1, -196617, 917504, 0, -131081, 917504, 1, -196616, 851968, 0, -131080, 851968, 1, -196619, 917504, 0, -131083, 917504, 1, -196618, 851968, 0, -131082, 851968, 1, -1507325, 851968, 0, -1441789, 851968, 1, -1507324, 917504, 0, -1441788, 917504, 1, -1507327, 851968, 0, -1441791, 851968, 1, -1507326, 917504, 0, -1441790, 917504, 1, -1441793, 851968, 0, -1376257, 851968, 1, -1507328, 917504, 0, -1441792, 917504, 1, -1441795, 851968, 0, -1376259, 851968, 1, -1441794, 917504, 0, -1441796, 917504, 0, -1376260, 917504, 1, -1376258, 917504, 1, 65523, 917504, 0, 131059, 917504, 1, 196595, 917504, 0, 262131, 917504, 1, 327667, 917504, 0, 393203, 917504, 1, 458739, 917504, 0, 524275, 917504, 1, 65524, 851968, 0, 131060, 851968, 1, 65525, 917504, 0, 131061, 917504, 1, 196596, 851968, 0, 262132, 851968, 1, 196597, 917504, 0, 262133, 917504, 1, 327668, 851968, 0, 393204, 851968, 1, 327669, 917504, 0, 393205, 917504, 1, 458740, 851968, 0, 524276, 851968, 1, 458741, 917504, 0, 524277, 917504, 1, 65526, 851968, 0, 131062, 851968, 1, 65527, 917504, 0, 131063, 917504, 1, 196598, 851968, 0, 262134, 851968, 1, 196599, 917504, 0, 262135, 917504, 1, 327670, 851968, 0, 393206, 851968, 1, 327671, 917504, 0, 393207, 917504, 1, 458742, 851968, 0, 524278, 851968, 1, 458743, 917504, 0, 524279, 917504, 1, 65528, 851968, 0, 131064, 851968, 1, 65529, 917504, 0, 131065, 917504, 1, 196600, 851968, 0, 262136, 851968, 1, 196601, 917504, 0, 262137, 917504, 1, 327672, 851968, 0, 393208, 851968, 1, 327673, 917504, 0, 393209, 917504, 1, 458744, 851968, 0, 524280, 851968, 1, 458745, 917504, 0, 524281, 917504, 1, 65530, 851968, 0, 131066, 851968, 1, 65531, 917504, 0, 131067, 917504, 1, 196602, 851968, 0, 262138, 851968, 1, 196603, 917504, 0, 262139, 917504, 1, 327674, 851968, 0, 393210, 851968, 1, 327675, 917504, 0, 393211, 917504, 1, 458746, 851968, 0, 524282, 851968, 1, 458747, 917504, 0, 524283, 917504, 1, 65532, 851968, 0, 131068, 851968, 1, 65533, 917504, 0, 131069, 917504, 1, 196604, 851968, 0, 262140, 851968, 1, 196605, 917504, 0, 262141, 917504, 1, 327676, 851968, 0, 393212, 851968, 1, 327677, 917504, 0, 393213, 917504, 1, 458748, 851968, 0, 524284, 851968, 1, 458749, 917504, 0, 524285, 917504, 1, 65534, 851968, 0, 131070, 851968, 1, 65535, 917504, 0, 131071, 917504, 1, 196606, 851968, 0, 262142, 851968, 1, 196607, 917504, 0, 262143, 917504, 1, 327678, 851968, 0, 393214, 851968, 1, 327679, 917504, 0, 393215, 917504, 1, 458750, 851968, 0, 524286, 851968, 1, 458751, 917504, 0, 524287, 917504, 1, 0, 851968, 0, 65536, 851968, 1, 1, 917504, 0, 65537, 917504, 1, 131072, 851968, 0, 196608, 851968, 1, 131073, 917504, 0, 196609, 917504, 1, 262144, 851968, 0, 327680, 851968, 1, 262145, 917504, 0, 327681, 917504, 1, 393216, 851968, 0, 458752, 851968, 1, 393217, 917504, 0, 458753, 917504, 1, 2, 851968, 0, 65538, 851968, 1, 3, 917504, 0, 65539, 917504, 1, 131074, 851968, 0, 196610, 851968, 1, 131075, 917504, 0, 196611, 917504, 1, 262146, 851968, 0, 327682, 851968, 1, 262147, 917504, 0, 327683, 917504, 1, 393218, 851968, 0, 458754, 851968, 1, 393219, 917504, 0, 458755, 917504, 1, 4, 851968, 0, 65540, 851968, 1, 5, 917504, 0, 65541, 917504, 1, 131076, 851968, 0, 196612, 851968, 1, 131077, 917504, 0, 196613, 917504, 1, 262148, 851968, 0, 327684, 851968, 1, 262149, 917504, 0, 327685, 917504, 1, 393220, 851968, 0, 458756, 851968, 1, 393221, 917504, 0, 458757, 917504, 1, 6, 851968, 0, 65542, 851968, 1, 7, 917504, 0, 65543, 917504, 1, 131078, 851968, 0, 196614, 851968, 1, 131079, 917504, 0, 196615, 917504, 1, 262150, 851968, 0, 327686, 851968, 1, 262151, 917504, 0, 327687, 917504, 1, 393222, 851968, 0, 458758, 851968, 1, 393223, 917504, 0, 458759, 917504, 1, 8, 851968, 0, 65544, 851968, 1, 9, 917504, 0, 65545, 917504, 1, 131080, 851968, 0, 196616, 851968, 1, 131081, 917504, 0, 196617, 917504, 1, 262152, 851968, 0, 327688, 851968, 1, 262153, 917504, 0, 327689, 917504, 1, 393224, 851968, 0, 458760, 851968, 1, 393225, 917504, 0, 458761, 917504, 1, 10, 851968, 0, 65546, 851968, 1, 11, 917504, 0, 65547, 917504, 1, 131082, 851968, 0, 196618, 851968, 1, 131083, 917504, 0, 196619, 917504, 1, 262154, 851968, 0, 327690, 851968, 1, 262155, 917504, 0, 327691, 917504, 1, 393226, 851968, 0, 458762, 851968, 1, 393227, 917504, 0, 458763, 917504, 1, 12, 851968, 0, 65548, 851968, 1, 13, 917504, 0, 65549, 917504, 1, 131084, 851968, 0, 196620, 851968, 1, 131085, 917504, 0, 196621, 917504, 1, 262156, 851968, 0, 327692, 851968, 1, 262157, 917504, 0, 327693, 917504, 1, 393228, 851968, 0, 458764, 851968, 1, 393229, 917504, 0, 458765, 917504, 1, -1310724, 851968, 0, -1245188, 851968, 1, -1310723, 917504, 0, -1245187, 917504, 1, -1179652, 851968, 0, -1114116, 851968, 1, -1179651, 917504, 0, -1114115, 917504, 1, -1048580, 851968, 0, -983044, 851968, 1, -1048579, 917504, 0, -983043, 917504, 1, -917508, 851968, 0, -851972, 851968, 1, -917507, 917504, 0, -851971, 917504, 1, -786436, 851968, 0, -720900, 851968, 1, -786435, 917504, 0, -720899, 917504, 1, -655364, 851968, 0, -589828, 851968, 1, -655363, 917504, 0, -589827, 917504, 1, -524292, 851968, 0, -524291, 917504, 0, -1310722, 851968, 0, -1245186, 851968, 1, -1310721, 917504, 0, -1245185, 917504, 1, -1179650, 851968, 0, -1114114, 851968, 1, -1179649, 917504, 0, -1114113, 917504, 1, -1048578, 851968, 0, -983042, 851968, 1, -1048577, 917504, 0, -983041, 917504, 1, -917506, 851968, 0, -851970, 851968, 1, -917505, 917504, 0, -851969, 917504, 1, -786434, 851968, 0, -720898, 851968, 1, -786433, 917504, 0, -720897, 917504, 1, -655362, 851968, 0, -589826, 851968, 1, -655361, 917504, 0, -589825, 917504, 1, -524290, 851968, 0, -524289, 917504, 0, -1376256, 851968, 0, -1310720, 851968, 1, -1376255, 917504, 0, -1310719, 917504, 1, -1245184, 851968, 0, -1179648, 851968, 1, -1245183, 917504, 0, -1179647, 917504, 1, -1114112, 851968, 0, -1048576, 851968, 1, -1114111, 917504, 0, -1048575, 917504, 1, -983040, 851968, 0, -917504, 851968, 1, -983039, 917504, 0, -917503, 917504, 1, -851968, 851968, 0, -786432, 851968, 1, -851967, 917504, 0, -786431, 917504, 1, -720896, 851968, 0, -655360, 851968, 1, -720895, 917504, 0, -655359, 917504, 1, -589824, 851968, 0, -589823, 917504, 0, -1376254, 851968, 0, -1310718, 851968, 1, -1376253, 917504, 0, -1310717, 917504, 1, -1245182, 851968, 0, -1179646, 851968, 1, -1245181, 917504, 0, -1179645, 917504, 1, -1114110, 851968, 0, -1048574, 851968, 1, -1114109, 917504, 0, -1048573, 917504, 1, -983038, 851968, 0, -917502, 851968, 1, -983037, 917504, 0, -917501, 917504, 1, -851966, 851968, 0, -786430, 851968, 1, -851965, 917504, 0, -786429, 917504, 1, -720894, 851968, 0, -655358, 851968, 1, -720893, 917504, 0, -655357, 917504, 1, -589822, 851968, 0, -589821, 917504, 0, -1376252, 851968, 0, -1310716, 851968, 1, -1245180, 851968, 0, -1179644, 851968, 1, -1114108, 851968, 0, -1048572, 851968, 1, -983036, 851968, 0, -917500, 851968, 1, -851964, 851968, 0, -786428, 851968, 1, -720892, 851968, 0, -655356, 851968, 1, -589820, 851968, 0)
layer_2/tile_data = PackedInt32Array(65534, 131072, 8, 65535, 196608, 8, 0, 262144, 8, 1, 65536, 8, 2, 131072, 8, 3, 196608, 8, 4, 262144, 8, 5, 65536, 8, 6, 131072, 8, 7, 196608, 8, 8, 262144, 8, 9, 327680, 8, 65532, 262144, 8, 65533, 65536, 8, 65530, 131072, 8, 65531, 196608, 8, 65528, 196608, 8, 65529, 65536, 8, 65527, 0, 8, 65549, 0, 10, 14, 458752, 1, 65550, 458752, 2, -589813, 131072, 5, -589812, 196608, 5, -589811, 262144, 5, -589810, 720896, 0, -589817, 131072, 5, -589816, 196608, 5, -589815, 262144, 5, -589814, 65536, 5, -589819, 0, 5, -589818, 65536, 5, -524293, 327680, 5, -524297, 65536, 5, -524296, 131072, 5, -524295, 196608, 5, -524294, 262144, 5, 65522, 524288, 1, 131058, 524288, 2, 131059, 196608, 10, -196622, 524288, 1, -131086, 524288, 2, -65550, 524288, 3, -14, 524288, 4, -458766, 524288, 1, -393230, 524288, 2, -327694, 524288, 3, -262158, 524288, 4, -524302, 655360, 0, -524301, 65536, 5, -524300, 131072, 5, -524299, 196608, 5, -524298, 262144, 5, -1507333, 720896, 268435456, -1441797, 327680, 1, -1376261, 327680, 2, -1310725, 327680, 3, -1245189, 327680, 4, -1179653, 327680, 1, -1114117, 327680, 2, -1048581, 327680, 3, -983045, 327680, 4, -917509, 327680, 1, -851973, 327680, 2, -786437, 327680, 3, -720901, 327680, 4, -1507332, 65536, 5, -1507331, 131072, 5, -1507330, 196608, 5, -1507329, 262144, 5, -1572864, 65536, 5, -1572863, 131072, 5, -1572862, 196608, 5, -1572861, 262144, 5, -1572860, 196608, 5, -1572859, 720896, 0, -1507323, 0, 1, -1441787, 0, 2, -1376251, 0, 3, -1310715, 0, 4, -1245179, 0, 1, -1179643, 0, 2, -1114107, 0, 3, -1048571, 0, 4, -983035, 0, 1, -917499, 0, 2, -851963, 0, 3, -786427, 0, 4, -1245186, 0, 10, -1245185, 65536, 10, -1310720, 131072, 10, -1310719, 65536, 10, -1310718, 196608, 10, -196610, 0, 10, -196609, 65536, 10, -262144, 131072, 10, -262143, 65536, 10, -262142, 196608, 10, -655365, 327680, 1, -589829, 327680, 2, -720891, 0, 1, -655355, 0, 2, 196594, 524288, 3, 262130, 524288, 4, 327666, 524288, 1, 393202, 524288, 2, 458738, 524288, 3, 524274, 524288, 4, 589810, 655360, 536870912, 589811, 65536, 0, 589812, 131072, 0, 589813, 196608, 0, 589814, 262144, 0, 589815, 65536, 0, 589816, 131072, 0, 589817, 196608, 0, 589818, 262144, 0, 589819, 65536, 0, 589820, 131072, 0, 589821, 196608, 0, 589822, 262144, 0, 589823, 65536, 0, 524288, 131072, 0, 524289, 196608, 0, 524290, 65536, 0, 524291, 131072, 0, 524292, 196608, 0, 524293, 262144, 0, 524294, 65536, 0, 524295, 131072, 0, 524296, 196608, 0, 524297, 262144, 0, 524298, 65536, 0, 524299, 131072, 0, 524300, 196608, 0, 524301, 262144, 0, -524274, 458752, 1, -458738, 458752, 2, -393202, 458752, 3, -327666, 458752, 4, -262130, 458752, 1, -196594, 458752, 2, -131058, 458752, 3, -65522, 458752, 4, 131086, 458752, 3, 196622, 458752, 4, 262158, 458752, 1, 327694, 458752, 2, 393230, 458752, 3, 458766, 458752, 4, 524302, 655360, 805306368, -9, 0, 7, -8, 65536, 7, -7, 131072, 7, -6, 196608, 7, -5, 262144, 7, -4, 65536, 7, -3, 131072, 7, -2, 196608, 7, -1, 262144, 7, -65536, 65536, 7, -65535, 131072, 7, -65534, 196608, 7, -65533, 262144, 7, -65532, 65536, 7, -65531, 131072, 7, -65530, 196608, 7, -65529, 262144, 7, -65528, 65536, 7, -65527, 327680, 7, 196618, 0, 10, 196619, 65536, 10, 196620, 131072, 10, 196621, 196608, 10, 262131, 0, 10, 262132, 65536, 10, 262133, 131072, 10, 262134, 196608, 10, 393212, 655360, 7, 458748, 655360, 8, 458749, 720896, 8, 524286, 720896, 8, 524284, 655360, 9, 524285, 720896, 9, 393219, 786432, 8, 458755, 786432, 9, 327684, 851968, 7, 393220, 851968, 8, 458756, 851968, 9, 458754, 786432, 8, 524277, 786432, 8, 458742, 786432, 8, 524278, 786432, 9, 393207, 851968, 7, 458743, 851968, 8, 524279, 851968, 9, 327689, 655360, 7, 393225, 655360, 8, 458761, 655360, 9, 393226, 720896, 8, 458762, 720896, 9, 458763, 720896, 8, 393208, 65536, 0, 393209, 131072, 0, 393210, 196608, 0, 393211, 262144, 0, 458744, 65536, 1, 524280, 65536, 2, 458745, 131072, 1, 524281, 131072, 2, 458746, 196608, 1, 524282, 196608, 2, 458747, 262144, 1, 524283, 262144, 2, 393221, 65536, 1, 458757, 65536, 2, 393222, 131072, 1, 458758, 131072, 2, 393223, 196608, 1, 458759, 196608, 2, 393224, 262144, 1, 458760, 262144, 2, 327685, 65536, 0, 327686, 131072, 0, 327687, 196608, 0, 327688, 262144, 0)

[node name="Holders na Cena" parent="." instance=ExtResource("2_lyiof")]

[node name="Holder1" parent="Holders na Cena" instance=ExtResource("3_0v0bs")]
position = Vector2(-21, 113)

[node name="Holder2" parent="Holders na Cena" instance=ExtResource("3_0v0bs")]
position = Vector2(-1, 113)

[node name="Holder3" parent="Holders na Cena" instance=ExtResource("3_0v0bs")]
position = Vector2(19, 113)

[node name="Calculo Component" parent="Holders na Cena" instance=ExtResource("3_nvkyp")]

[node name="Coins" type="Node2D" parent="."]

[node name="Coin_Eight" parent="Coins" instance=ExtResource("6_3ffci")]
position = Vector2(169, 40)

[node name="Coin Number One" parent="Coins" instance=ExtResource("7_ju6t0")]
position = Vector2(194, 40)

[node name="Coin_Seven" parent="Coins" instance=ExtResource("8_kra37")]
position = Vector2(207, 9)

[node name="Coin_Six" parent="Coins" instance=ExtResource("9_emalu")]
position = Vector2(-169, 40)

[node name="Coin_Two" parent="Coins" instance=ExtResource("10_wglgk")]
position = Vector2(-197, 40)

[node name="Coin_Three" parent="Coins" instance=ExtResource("11_26suf")]
position = Vector2(-209, 8)

[node name="Operators" type="Node2D" parent="."]

[node name="Subtracao" parent="Operators" instance=ExtResource("5_04uty")]
position = Vector2(-105, 71)

[node name="Adicao" parent="Operators" instance=ExtResource("6_hl0ei")]
position = Vector2(103, 71)

[node name="Doors" type="Node2D" parent="."]

[node name="StageEnd_Door1" parent="Doors" instance=ExtResource("4_s2tpq")]
position = Vector2(204, 113)

[node name="DoorCode1" type="Sprite2D" parent="Doors/StageEnd_Door1"]
position = Vector2(-2, -18)
texture = ExtResource("15_x06bk")
region_enabled = true
region_rect = Rect2(128, 16, 16, 16)

[node name="StageEnd_Door2" parent="Doors" instance=ExtResource("4_s2tpq")]
position = Vector2(-206, 113)
scale = Vector2(-1, 1)

[node name="DoorCode2" type="Sprite2D" parent="Doors/StageEnd_Door2"]
position = Vector2(-2, -18)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("15_x06bk")
region_enabled = true
region_rect = Rect2(64, 16, 16, 16)

[node name="Sett" parent="." instance=ExtResource("2_ryoir")]
position = Vector2(-18, -315)

[node name="Snake" parent="." instance=ExtResource("17_8ttds")]
position = Vector2(-54, -25)

[node name="Spider" parent="." instance=ExtResource("18_4tuhs")]
position = Vector2(24, -28)

[connection signal="on_item_placed" from="Holders na Cena" to="Holders na Cena/Calculo Component" method="_on_holders_na_cena_on_item_placed"]
[connection signal="on_coin_placed" from="Holders na Cena/Holder1" to="Holders na Cena" method="_on_holder_1_on_coin_placed"]
[connection signal="on_operator_placed" from="Holders na Cena/Holder1" to="Holders na Cena" method="_on_holder_1_on_operator_placed"]
[connection signal="on_coin_placed" from="Holders na Cena/Holder2" to="Holders na Cena" method="_on_holder_2_on_coin_placed"]
[connection signal="on_operator_placed" from="Holders na Cena/Holder2" to="Holders na Cena" method="_on_holder_2_on_operator_placed"]
[connection signal="on_coin_placed" from="Holders na Cena/Holder3" to="Holders na Cena" method="_on_holder_3_on_coin_placed"]
[connection signal="on_operator_placed" from="Holders na Cena/Holder3" to="Holders na Cena" method="_on_holder_3_on_operator_placed"]
[connection signal="result_updated" from="Holders na Cena/Calculo Component" to="Doors/StageEnd_Door1" method="_on_calculo_component_result_updated"]
[connection signal="result_updated" from="Holders na Cena/Calculo Component" to="Doors/StageEnd_Door2" method="_on_calculo_component_result_updated"]
[connection signal="player_enters_door" from="Doors/StageEnd_Door1" to="." method="_on_player_enters_plus_door"]
[connection signal="player_enters_door" from="Doors/StageEnd_Door2" to="." method="_on_player_enters_minus_door"]
